# clipper-slack-notion

./: README.md  pyproject.toml
sncopy/: __init__.py
